<resources>
    <string name="app_name">Fall</string>
    <string name="has_exist">已经存在了</string>
    <string name="no_exist">不存在</string>
    <string name="searching_device">正在搜索设备</string>
    <string name="search_device_result">搜索结果</string>
    <string name="no_device_tip">没有设备</string>
    <string name="my_device">我的设备</string>
    <string name="clear">清除</string>
    <string name="del_device_dialog_msg">确认要删除该设备吗?</string>
    <string name="del_device_fail">删除设备失败</string>
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>
    <string name="dismiss">隐藏</string>
    <string name="confirm">确定</string>
    <string name="tip_exit_app">你确定要退出应用吗?</string>
    <string name="tip">提示</string>
    <string name="dialog_no">取消</string>
    <string name="dialog_yes">确定</string>
    <string name="valuehandle">valueHandle : %1$d</string>
    <string name="properties">properties : %1$d</string>
    <string name="handle">handle : %1$d</string>
    <string name="uuid">uuid : %1$s</string>
    <string name="show_record">历史记录</string>
    <string name="clear_records_tip">清除历史消息吗</string>
    <string name="record_time">Time : %1$s</string>
    <string name="record_value">Value : %1$s</string>
    <string name="record_name">Name : %1$s</string>
    <string name="record_dataType">DataType : %1$s</string>
    <string name="record_handle">Handle : %1$d</string>


</resources>
