<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/customdialog_btn_height"
        android:gravity="center"
        android:text="@string/prompt"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size_28" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D1D1D1" />


    <com.cassianetworks.fall.views.DampScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scrollbars="none">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/customdialog_margin_lr"
            android:layout_marginRight="@dimen/customdialog_margin_lr"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/customdialog_margin_lr"
            android:paddingTop="@dimen/customdialog_margin_lr"
            android:text="@string/tip_exit_app"
            android:textColor="#313131"
            android:textSize="@dimen/size_28" />
    </com.cassianetworks.fall.views.DampScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D1D1D1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/customdialog_btn_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/left_btn_select"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/btntextcolor"
            android:textSize="@dimen/size_28" />

        <View
            android:id="@+id/single_line"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D1D1D1" />

        <Button
            android:id="@+id/neutral_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/left_btn_select"
            android:text="@string/dismiss"
            android:textAllCaps="false"
            android:textColor="@color/btntextcolor"
            android:textSize="@dimen/size_28" />

        <View
            android:id="@+id/second_line"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D1D1D1" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/right_btn_select"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/btntextcolor"
            android:textSize="@dimen/size_28" />
    </LinearLayout>
</LinearLayout>
